# syncr

./: Cargo.toml  client.toml  diesel.toml  model.json  server.toml  syncr.toml
migrations/common/predictor_saves/: down.sql  up.sql
src/: main.rs  schema.rs
src/client/: database.rs  init.rs  mod.rs
src/client/tray/: mod.rs
src/client/watcher/: inner.rs  mod.rs  utils.rs
src/common/: mod.rs  noise.rs  packet.rs  stream.rs
src/common/config/: mod.rs  store.rs  structure.rs
src/common/config/primary/: mod.rs  store.rs  structure.rs
src/common/config/sync/: mod.rs  store.rs  structure.rs
src/common/crypto/: engine.rs  keys.rs  mod.rs  nonce.rs
src/common/crypto/stream/: main.rs  mod.rs  read.rs  write.rs
src/common/packets/: auth.rs  base.rs  dynamic.rs  mmap.rs  mod.rs  nonce.rs  salt.rs  sanity.rs  size.rs  static.rs
src/common/packets/types/: mod.rs  sanity.rs  size.rs  tiebreak.rs
src/common/packets/types/sync/: ack.rs  delta.rs  force.rs  init.rs  mod.rs
src/common/packets/utils/: macros.rs  mod.rs  send.rs
src/common/stream/: main.rs  mod.rs
src/common/sync/: delta.rs  mod.rs  signature.rs  utils.rs
src/data/: driver.rs  mod.rs
src/data/entities/: base.rs  mod.rs  predictor.rs
src/model/: mod.rs  node.rs  predictor.rs  utils.rs
src/server/: config.rs  database.rs  init.rs  mod.rs
src/server/handlers/: client.rs
src/utils/: async_write_adapter.rs  hash.rs  log.rs  mod.rs  write_wrapper.rs
test/data/medium/: new.txt  old.txt.bak
test/data/small/: new.txt
