[package]
name = "syncr-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
linfa-trees = { version = "0.7.0", features = ["serde"] }
fast_rsync = "0.2.0"
linfa = { version = "0.7.0", features = ["serde"] }
ndarray = { version = "0.15" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
anyhow = "1.0.93"
rand = "0.8.5"
tokio = { version = "1.41.1", features = ["full"] }
dirs = "5.0.1"
futures = "0.3.31"
bytes = "1.8.0"
bincode = "1.3.3"
multi-read-write = { git = "https://github.com/GustavoWidman/multi-read-write", branch = "main" }
snowstorm = "0.4.0"
notify = "7.0.0"
toml = "0.8.19"
fixedstr = { version = "0.5.8", features = ["serde"] }
