[package]
name = "syncr-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
fast_rsync = "0.2.0"
serde = { version = "1.0.217", features = ["derive"] }
anyhow = "1.0.95"
rand = "0.8.5"
tokio = { version = "1.43.0", features = ["full"] }
dirs = "5.0.1"
futures = "0.3.31"
bytes = "1.9.0"
bincode = "1.3.3"
snowstorm = "0.4.0"
notify = "8.0.0"
toml = "0.8.19"
fixedstr = { version = "0.5.8", features = ["serde"] }
memmap2 = "0.9.5"
tempfile = "3.15.0"
blake3 = { version = "1.5.5", features = ["rayon", "mmap", "serde"] }
diesel = { version = "2.2.6", features = [
	"sqlite",
	"returning_clauses_for_sqlite_3_35",
	"chrono",
] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
chrono = "0.4.39"
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
rayon = "1.10.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
indexmap = { version = "2.7.0", features = ["serde", "rayon"] }
# glob = "0.3.1"
# walkdir = "2.5.0"
jwalk = "0.8.1"
globwalk = "0.9.1"
notify-debouncer-full = "0.5.0"
uuid = { version = "1.11.1", features = ["v4"] }
debounce = "0.2.2"
colog = "1.3.0"
log = "0.4.24"
env_logger = "0.11.6"
io_tee = "0.1.1"
regex = "1.11.1"
